# MaxVoice

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: pynput-macos-capslock-crash.md  pyqt-ctrl-c-signal.md  resource-cleanup.md
src/maxvoice/: __main__.py  app.py  config.py  db.py  hotkey.py  paste.py  paths.py  pricing.py  recorder.py  storage.py  typing_speed.py  vad.py
src/maxvoice/gui/: dictionary.py  history.py  hotkey_edit.py  icons.py  metrics.py  settings.py  tray.py
src/maxvoice/refine/: __init__.py  azure_chat.py  base.py  registry.py
src/maxvoice/stt/: __init__.py  azure_openai.py  base.py  registry.py
